some updates on the refresh token

--- a/Network Security/appsettings.json
+++ b/Network Security/appsettings.json
@@ -6,8 +6,9 @@
     "Key": "YourSuperSecretKeyHere_ChangeThisToLongRandomString",
     "Issuer": "NetworkSecurityApp",
     "Audience": "NetworkSecurityUsers",
-    "AccessTokenExpirationMinutes": 15,
-    "RefreshTokenExpirationDays": 7
+    "AccessTokenExpirationMinutes": 0.25,
+    "RefreshTokenExpirationMinutes": 1,
+    "RefreshTokenExpirationDays": null
   },
   "Encryption": {
     "Key": "32ByteLengthEncryptionKeyHere12345678",
